Added undocumented feature: cheats
Added undocumented feature: cheats.
CTRL+L = Zero test time remaining
CTRL+P = Quit

--- a/MarketSimulation/quest1.ui
+++ b/MarketSimulation/quest1.ui
@@ -43,14 +43,19 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="label">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>Questionnaire</string>
        </property>
-       <property name="text">
-        <string>Thanks for playing.  What's you, Major?</string>
+      </widget>
+     </item>
+     <item>
+      <widget class="QFrame" name="frame">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
