--- a/MarketSimulation/instructionscreen2.ui
+++ b/MarketSimulation/instructionscreen2.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>804</width>
+    <width>1332</width>
     <height>407</height>
    </rect>
   </property>
@@ -103,7 +103,7 @@
            </font>
           </property>
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You may make your initial allocation by setting the slider to the percentage of the $10 endowment that you wish to allocate to each asset.&lt;/p&gt;&lt;p&gt;Moving the slider to the left will allocate more to Asset 1 and less to Asset 2. Moving it to the right will allocate more to Asset 2 and less to Asset 1.&lt;/p&gt;&lt;p&gt;Once you have decided on an allocation click the submit button. You MUST click the Submit Allocation button in order to change your allocation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You may make your initial allocation by setting the slider to the percentage of the $10 endowment that you wish to allocate to each asset.&lt;/p&gt;&lt;p&gt;Moving the slider to the right will allocate more to Asset 1 and less to Asset 2. Moving it to the left will allocate more to Asset 2 and less to Asset 1.&lt;/p&gt;&lt;p&gt;Once you have decided on an allocation click the submit button. You MUST click the Submit Allocation button in order to change your allocation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
