Completed most of Digsy's latest screen changes  * Screen 2 add "the"  * Screen 3 captilisation, new sentence  * Screen 5 revert text add spacing,  * Screen 6 spacing  * Screen 7 line change  * Set fixed size for simulation and screenshot, QPictureLabel causing some lingering issues  * Screen 10 rewrite text  * Screen 13 blank out previous once allocation submitted

--- a/MarketSimulation/instructionscreen1.ui
+++ b/MarketSimulation/instructionscreen1.ui
@@ -10,6 +10,12 @@
     <height>404</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -56,7 +62,15 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Thank you for agreeing to take part in this study.&lt;/p&gt;&lt;p&gt;If you do not understand any of the following instructions please raise your hand and the experimenter will clarify them for you.&lt;/p&gt;&lt;p&gt;During this experiment you will invest $10 in a stock market simulation.&lt;/p&gt;&lt;p&gt;There are 2 assets, Asset 1 and Asset 2. You may choose any non-negative allocation between Asset 1 and Asset 2.&lt;/p&gt;&lt;p&gt;Your initial allocation will be made on a screen like one shown on the next page. Please click the Next button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Thank you for agreeing to take part in this study.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If you do not understand any of the following instructions please raise your hand and the experimenter will clarify them for you.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;During this experiment you will invest $10 in a stock market simulation.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;There are 2 assets, Asset 1 and Asset 2. You may choose any non-negative allocation between Asset 1 and Asset 2.&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Your initial allocation will be made on a screen like the one shown on the next page. Please click the Next button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
