Structural portion of Digsy's changes mostly complete
 * Moved wealth display onto investment slider
 * Market index bottom of screen, not connected to signal presently
 * Re-ordered decryption and sim screen

--- a/MarketSimulation/investmentslider.ui
+++ b/MarketSimulation/investmentslider.ui
@@ -254,6 +254,49 @@
            </spacer>
           </item>
           <item>
+           <widget class="QLabel" name="wealthLabelDesc">
+            <property name="font">
+             <font>
+              <pointsize>12</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string>Investment Value:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="wealthLabel">
+            <property name="minimumSize">
+             <size>
+              <width>20</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>12</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
            <widget class="QPushButton" name="allocationButton">
             <property name="text">
              <string>Submit
@@ -323,36 +366,6 @@ Allocation</string>
                 </size>
                </property>
               </spacer>
-             </item>
-             <item>
-              <widget class="QLabel" name="wealthLabelDesc">
-               <property name="font">
-                <font>
-                 <pointsize>12</pointsize>
-                </font>
-               </property>
-               <property name="text">
-                <string>Investment Value:</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="wealthLabel">
-               <property name="minimumSize">
-                <size>
-                 <width>20</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="font">
-                <font>
-                 <pointsize>12</pointsize>
-                </font>
-               </property>
-               <property name="text">
-                <string/>
-               </property>
-              </widget>
              </item>
              <item>
               <spacer name="horizontalSpacer_5">
